--- a/config.toml
+++ b/config.toml
@@ -10,10 +10,18 @@ build_search_index = true
 theme = "kodama-theme"
 
 
+# Various slugification strategies, see below for details
+# Defaults to everything being a slug
+[slugify]
+paths = "on"
+taxonomies = "on"
+anchors = "on"
+
 [markdown]
 # Whether to do syntax highlighting
 # Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
 highlight_code = true
+highlight_theme = "base16-ocean-dark"
 
 
 [extra]
@@ -37,7 +45,7 @@ menu_items = [
 
 [translations]
 Biography = "计算语言学与意識科学实验室"
-Interests = "Interests"
+Interests = "研究方向 | Research Interests"
 Education = "Education"
 toc = "Table of Contents"
 Published = "Published"
@@ -45,10 +53,3 @@ Abstract = "Abstract"
 volume = "volume"
 number = "number"
 pages = "pages"
-
-# [languages.en.translations]
-# Biography = "Bio"
-# Interests = "Interests"
-# Education = "Education"
-# Published = "Publication"
-# Abstract = "CV"
