--- a/config.toml
+++ b/config.toml
@@ -1,57 +1,35 @@
 # The URL the site will be built for
-base_url = "example.com"
+base_url = "innerfirexy.github.io"
 
-title = "CLCS"
+title = "CLCS Research Blog"
 
 # Whether to automatically compile all Sass files in the sass directory
 compile_sass = true
 
 # Whether to build a search index to be used later on by a JavaScript library
-build_search_index = true
+build_search_index = true # Whether to automatically compile all Sass files in the sass directory
 
-theme = "kodama-theme"
-
-
-# Various slugification strategies, see below for details
-# Defaults to everything being a slug
-[slugify]
-paths = "on"
-taxonomies = "on"
-anchors = "on"
+# theme = "anpu" # https://www.getzola.org/themes/anpu/
+theme = "apollo"
 
 [markdown]
-# Whether to do syntax highlighting
-# Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
 highlight_code = true
-highlight_theme = "base16-ocean-dark"
-
+highlight_theme = "ayu-dark"
 
 [extra]
-# Image of your avatar displayed on the landing page
-avatar = "static/img/Xu_SUSTech.jpeg"
-# Image of the favicon
-favicon = "static/img/育-27_80B2.jpg"
+toc = true
+use_cdn = false
+favicon = "/icon/favicon.png"
+theme = "light" # light, dark, auto, toggle
+mathjax = true
+mathjax_dollar_inline_enable = true
 
-# Your email address showed in the contact section
-email = "xuyang[at]sustech[dot]edu[dot]cn"
-
-# If you don't want to show your contact information in the index
-contact_in_index = true
-
-# Additional menu items
-# `Name` is what it is displayed, `path` is the url
-menu_items = [
-  { path = "#contacts", name = "联系 | Contacts" },
-  { path = "#", name = "主页 | Home"}
+menu = [
+    { name = "记录|posts", url = "/posts", weight = 1 },
+    #{ name = "/projects", url = "/projects", weight = 2 },
+    { name = "关于|about", url = "/about", weight = 1 },
 ]
 
-[translations]
-Biography = "计算语言学与意識科学实验室"
-Interests = "研究方向 | Research Interests"
-Education = "Education"
-toc = "Table of Contents"
-Published = "Published"
-Abstract = "Abstract"
-volume = "volume"
-number = "number"
-pages = "pages"
+socials = [
+    { name = "github", url = "https://github.com/CLCS-SUSTech", icon = "github" },
+]
